--- a/example/index.html
+++ b/example/index.html
@@ -1,3 +1,2 @@
-<link rel="stylesheet" type="text/css" href="dist/main.css">
-<script src="bundle.js"></script>
+<link rel="stylesheet" type="text/css" href="dist/main.css" />
 <a href="#">click me</a>
